name:                wbstat
version:             1.0.0.0
synopsis:            Data analysis of weather balloon logs
description:         Please see README.md
homepage:            https://github.com/justanotherdot/wbstat#readme
license:             MIT
license-file:        LICENSE
author:              Ryan James Spencer
maintainer:          spencer.ryanjames@gmail.com
copyright:           Copyright (c) 2016 Ryan James Spencer
category:            Data Mining
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stats
                     , Units
                     , LogLine
                     , Obsv
                     , Error
  build-depends:       base >= 4.7 && < 5
                     , random
                     , time
                     , containers
                     , split
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable wbstat
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , random
                     , wbstat
                     , monad-loops
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wbstat
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justanotherdot/wbstat
